--- a/gridWebsite/static/css/simple_blog.css
+++ b/gridWebsite/static/css/simple_blog.css
@@ -1,11 +1,10 @@
 body {
 	background-color: #f4f4f4;
-	font-size: 14px
+	font-size: 14px;
 }
 .article {
 	max-width:506px;
 }
-
 ::selection:window-inactive {
     background: rgba(80,78,78,0.3);
 }
