--- a/gridWebsite/updateform/templates/updateform/simple_blog.html
+++ b/gridWebsite/updateform/templates/updateform/simple_blog.html
@@ -12,30 +12,60 @@
 <div class="container">
 	<div class="row justify-content-center">
 		<div class="col-xl-6 article mt-3">
-			<div class="bg-white shadow article1 p-5">
-				<div class="mb-2">
+			<div class="bg-white shadow-lg article1 p-5">
+				<!-- <div class="mb-2">
 					Article
-				</div>
-				<div class="bg-primary shadow text-center text-white lead helloworld">
+				</div> -->
+				<div class="bg-primary shadow-lg text-center text-white lead helloworld">
 					<a class="text-white aclasswide" href="#">Hello World</a>
 				</div>
 			</div>
+			<div class="my-5">
+				<div class="card shadow-lg">
+				  <div class="card-body">
+				    <form>
+					  <div class="form-group">
+					    <label for="exampleInputEmail1">Email address</label>
+					    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+					    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					  </div>
+					  <div class="form-group">
+					    <label for="exampleInputPassword1">Password</label>
+					    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					  </div>
+					  <div class="form-check">
+					    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+					    <label class="form-check-label mb-3" for="exampleCheck1">Check me out</label>
+					  </div>
+					  <button type="submit" class="btn btn-primary">Submit</button>
+					</form>
+				  </div>
+				</div>
+			</div>
+			<div class="card" style="width: 18rem;">
+			  <img class="card-img-top" src="https://source.unsplash.com/collection/190727/1400x700" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+			    <a href="#" class="btn btn-primary">Go somewhere</a>
+			  </div>
+			</div>
 		</div>
 		<div class="col-xl-6 article mt-3">
-			<h1 class="display-4">Hello,</h1>
+			<!-- <h1 class="display-4">Hello,</h1> -->
 			<!-- empty paragraph -->
-			<div>
+			<!-- <div>
 				<blockquote class="blockquote">
-					<!-- <p>Test Text here</p> -->
+					<p>Test Text here</p>
 					<footer class="text-right mb-5 blockquote-footer">
 						by Romel,
 						<cite>Self-Published Piece</cite>
 					</footer>
 				</blockquote>
-			<!-- <p class="lead">Another test text here </p> -->
-			</div> <!-- end of empty paragraph -->
+			<p class="lead">Another test text here </p>
+			</div> --> <!-- end of empty paragraph -->
 			<!-- first paragraph -->
-			<p class="lead text-justify p-5 mb-5 shadow bg-white"> 
+			<p class="px-5 py-5 mb-5 shadow-lg bg-white simpleparagraph"> 
 				This article explores Python modules and Python packages, two mechanisms that facilitate modular programming. 
 
 				Modular programming refers to the process of breaking a large, unwieldy programming task into separate, smaller, more manageable subtasks or modules. Individual modules can then be cobbled together like building blocks to create a larger application.
@@ -55,7 +85,7 @@
 			<!-- end of first paragraph -->
 			<p>another paragraph</p>
 			<!-- This table -->
-			<div class="shadow p-2 bg-white mb-5">
+			<div class="shadow-lg p-2 bg-white mb-5">
 				<table class="table table-hover">
 				  <thead class="thead-dark">
 				    <tr>
